Fix spacing on group page.

--- a/app/assets/stylesheets/app/boxes.css.scss
+++ b/app/assets/stylesheets/app/boxes.css.scss
@@ -1,4 +1,5 @@
 .small-box {
+  margin-bottom: 20px;
   & > a {
     color: #f9f9f9;
     display: block;
